k8s/deployments/registry/base.yml
---

kind: Namespace
apiVersion: v1
metadata:
  name: registry
  labels:
    name: registry
