k8s/deployments/registry/registry.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: "registrylocalvolume"

---

kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: registry

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-registry
        protocol: HTTP
      hosts:
        - "registry.192.168.33.16.nip.io"
    - port:
        number: 443
        name: https-nginx
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "registry.192.168.33.16.nip.io"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
  namespace: registry
spec:
  hosts:
    - "registry.192.168.33.16.nip.io"
  gateways:
    - registry
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: registry
            port:
              number: 5000
